--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,25 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
-<%= image_tag("superman.jpg", :alt => 'superman movie') %>
+<header role="banner">
+  <h1>Muslim Study Abroad</h1>
+  <nav role="navigation">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/programs/">Programs</a></li>
+      <li><a href="/scholarships/">Scholarships</a></li>
+      <li><a href="/contact/">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+<article>
+  <h2>Studying in Malaysia</h2>
+  <p>Information about studying in the 2016 summer program at the International Islamic University of Malaysia (IIUM).
+</article>
+<aside role="complementary">
+  <h2>Related Links</h2>
+  <ul>
+    <li><a href="http://www.facebook.com/muslimstudyabroad/">MSA - Facebook</a></li>
+  </ul>
+</aside>
+<footer role="contentinfo">
+  <p>&copy; 2015 Muslim Study Abroad</p>
+</footer>
