--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,28 +14,67 @@
  *= require_self
  */
 
-nav ul { 
-  list-style-type: none; 
-  padding: 0; 
-  margin: 25px 0 0; 
+body {
+  padding: 0;
+  margin: 0;
 }
-nav li { 
-  border: 1px solid #666; 
-  background-color: #eee; 
-  padding: 10px 1em;
-  margin: 3px 0 0;
-  text-align: center;
-}
-nav li a {
-  text-decoration: none;
-  font-size: 1.2em;
+.navi {
+  background-color: #333;
+  list-style: none;
+  margin: 0;
+  color: #fff;
+  text-align: left;
 }
 
-@media only screen and (min-width: 50em) {
-  nav li { 
-    display: block;
-    float: left;
-    width: 15%;
-  }
-  nav:after { content: ""; display: table; clear: both; }
+.navi > li {
+  display: block;
 }
+
+.navi > li > a {
+  text-decoration: none;
+  font-size: 40px;
+  color: #fff;
+}
+
+.nav-btn {
+  display: block;
+  background-color: #333;
+  color: #fff;
+  font-size: 40px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.nav-btn:before {
+  content: "Menu";
+}
+
+@media only screen and (min-width: 600px) {
+  .navi {
+  background-color: #333;
+  list-style: none;
+  margin: 0;
+  color: #fff;
+  text-align: left;
+}
+  
+  .nav-btn {
+    display: none;
+  }
+
+  .navi > ul {
+    display: block;
+  }
+
+  .navi > li {
+    display: inline-block;
+  }
+ 
+  .navi > li > a {
+    text-decoration: none;
+    font-size: 40px;
+    color: #fff;
+  }
+
+}
+
