--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav role="navigation">
     <span class="nav-btn"></span>
     <ul class="navi">
-      <li><a href="/">Home</a></li>
+      <li><a href="/">1Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Programs</a></li>
       <li><a href="#">Scholarships</a></li>
