test cap deploy

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <article>
   <h2>Studying in Malaysia</h2>
-  <p>Information is about studying in the 2016 summer program at the International Islamic University of Malaysia (IIUM).
+  <p>Information about studying in the 2016 summer program at the International Islamic University of Malaysia (IIUM).
 </article>
 <aside role="complementary">
   <h2>Related Links</h2>
