--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,4 @@
-/*
+    /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
@@ -19,13 +19,13 @@ body {
   margin: 0;
 }
 .navi {
-  background-color: #333;
+  background-color: #fff;
   list-style: none;
   margin: 0;
   color: #fff;
   text-align: left;
 }
-
+   
 .navi > li {
   display: block;
 }
@@ -38,7 +38,7 @@ body {
 
 .nav-btn {
   display: block;
-  background-color: #333;
+  background-color: #fff;
   color: #fff;
   font-size: 40px;
   text-align: center;
@@ -51,7 +51,7 @@ body {
 
 @media only screen and (min-width: 600px) {
   .navi {
-  background-color: #333;
+  background-color: #fff;
   list-style: none;
   margin: 0;
   color: #fff;
