--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@ body {
   margin: 0;
 }
 .navi {
-  background-color: #fff;
+  background-color: #333;
   list-style: none;
   margin: 0;
   color: #fff;
@@ -38,7 +38,7 @@ body {
 
 .nav-btn {
   display: block;
-  background-color: #fff;
+  background-color: #333;
   color: #fff;
   font-size: 40px;
   text-align: center;
@@ -51,7 +51,7 @@ body {
 
 @media only screen and (min-width: 600px) {
   .navi {
-  background-color: #fff;
+  background-color: #333;
   list-style: none;
   margin: 0;
   color: #fff;
